Arrumando o arquivo application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=ramengo
-spring.datasource.url=jdbc:postgresql://localhost/ramengo
-spring.datasource.username=postgres
-spring.datasource.password=110409*jen
+spring.datasource.url=jdbc:postgresql://${DB_NAME}/${DB_HOST}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 hibernate.dialect=org.hibernate.dialect.HSQLDialect
 spring.jpa.hibernate.ddl-auto=update
